--- a/config
+++ b/config
@@ -3,7 +3,7 @@
 ##################################
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
--- window key
+## window key
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -38,9 +38,6 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
-
-# kill focused window
-bindsym $mod+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id dmenu_run
@@ -80,9 +77,6 @@ bindsym $mod+h split h
 # split in vertical orientation
 bindsym $mod+v split v
 
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
@@ -100,11 +94,28 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-#### Custom Bindings
+#### Custom Config's
 bindsym $mod+m exec --no-startup-id rofi -show drun
 bindsym $mod+b exec firefox
-# start a terminal
+# start terminal
 bindsym $mod+Return exec kitty
+# kill focused window
+bindsym $mod+q kill
+# enter fullscreen mode for the focused container
+bindsym $mod+Shift+f fullscreen toggle
+
+default_border none
+
+title_align left
+
+### Custom colorclass
+##  class                 border  backgr. text    indicator child_border
+# client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
+# client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
+# client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+# client.urgent           #2f343a #900000 #ffffff #900000   #900000
+# client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+client.background       #040303
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -177,8 +188,8 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+### Start i3bar to display a workspace bar
+## (plus the system information i3status finds out, if available)
 bar {
         status_command i3status
 }
