--- a/settings/workspaces.conf
+++ b/settings/workspaces.conf
@@ -37,3 +37,7 @@ bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
+
+# change workspaces with Tab
+bindsym $mod+Tab workspace next
+bindsym $mod+Shift+Tab workspace prev
